--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>maki.cafe</title>
 		<meta name="viewport" content="width=device-width, initial-scale=0.6" />
 		<style>
 			@font-face {
