--- a/public/index.html
+++ b/public/index.html
@@ -89,8 +89,8 @@
 			server admin
 			<br />
 			<br />
-			<a href="mailto:maki@hotmilk.space">email</a>
-			<a href="xmpp:maki@hotmilk.space">xmpp</a>
+			<a href="mailto:maki[at]hotmilk.space">email</a>
+			<a href="xmpp:maki[at]hotmilk.space">xmpp</a>
 			<!-- <div style="margin: 12px 0;"></div> -->
 			<a href="https://github.com/makinori">github</a>
 		</p>
@@ -99,5 +99,10 @@
 		<br />
 		<br />
 		find my <a href="https://old.maki.cafe">old page here</a>
+		<script>
+			for (const el of document.querySelectorAll("a")) {
+				el.href = el.href.replace(/\[at\]/gi, "@");
+			}
+		</script>
 	</body>
 </html>
