--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 				font-size: 24px;
 				/* image has dithering to prevent banding */
 				/* fixed height of 1080px */
-				background-image: url(pines-background.jpg);
+				background-image: url(pines.jpg);
 				background-size: auto 1080px;
 				background-repeat: no-repeat;
 				background-position: -600px 0;
@@ -60,7 +60,6 @@
 			.title > .pony {
 				height: 128px;
 				margin-top: -24px;
-				filter: brightness(1.2);
 			}
 
 			a {
@@ -79,7 +78,7 @@
 		<div class="strip"></div>
 		<h1 class="title">
 			<span>mak<span style="letter-spacing: -8px">i</span></span>
-			<img class="pony" src="pony-cutout-128.png" alt="Maki Pony" />
+			<img class="pony" src="pony.png" alt="Maki Pony" />
 		</h1>
 		<p>
 			software engineer
