Update mailto links

--- a/public/index.html
+++ b/public/index.html
@@ -100,20 +100,22 @@
 			server admin
 			<br />
 			<br />
-			<a href="mailto:maki[at]hotmilk.space">email</a>
-			<a href="xmpp:maki[at]hotmilk.space">xmpp</a>
+			<a
+				href="mailto:&#109;&#097;&#107;&#105;&#064;&#104;&#111;&#116;&#109;&#105;&#108;&#107;&#046;&#115;&#112;&#097;&#099;&#101;"
+				title="maki@hotmilk.space"
+			>
+				email
+			</a>
+			<a href="xmpp:maki@hotmilk.space" title="maki@hotmilk.space">
+				xmpp
+			</a>
 			<!-- <div style="margin: 12px 0;"></div> -->
-			<a href="https://github.com/makinori">github</a>
+			<a href="https://github.com/makinori" title="@makinori">github</a>
 		</p>
 		<br />
 		currently reworking my site
 		<br />
 		<br />
 		find my <a href="https://old.maki.cafe">old page here</a>
-		<script>
-			for (const el of document.querySelectorAll("a")) {
-				el.href = el.href.replace(/\[at\]/gi, "@");
-			}
-		</script>
 	</body>
 </html>
