--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -16,7 +16,7 @@
 	<a href="{{.GitHubURL}}" title="@{{.GitHubUsername}}">github</a>
 </p>
 <br />
-currently reworking my site
+reworking my site...
 <br />
 <br />
 find my <a href="https://old.maki.cafe">old page here</a>
