Add content encoding support and organize

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,6 +1,6 @@
 <h1 class="title">
-	<span>mak<span style="letter-spacing: -8px">i</span></span>
-	<img class="pony" src="pony.png" alt="Maki Pony" />
+	<span>mak<span style="letter-spacing: -4px">i</span></span>
+	<img class="pony" src="pony.png" />
 </h1>
 <p>
 	software engineer
