Update maki webring

--- a/cmd/makewebring/index.html
+++ b/cmd/makewebring/index.html
@@ -7,8 +7,8 @@
 
 			body {
 				background-color: #000;
-				font-family: "Maki Libertinus Mono";
-				font-weight: 700;
+				font-family: "Maple Mono NL";
+				font-weight: bold;
 			}
 
 			.button {
@@ -29,11 +29,12 @@
 
 			.text {
 				position: absolute;
-				top: 2.25px;
-				left: 5px;
+				top: 0.5px;
+				left: 2.5px;
 				color: #fff;
 				font-size: 24px;
-				letter-spacing: 1px;
+				letter-spacing: -0.06em;
+				line-height: 32px;
 			}
 
 			.bg {
@@ -54,8 +55,8 @@
 				src="../../src/public/images/pines-1080-noblur.jpg"
 			/>
 			<div class="text">
-				ma<span style="margin-left: -0.5px">k</span
-				><span style="margin-left: -1.5px">i</span>
+				ma<span style="margin-left: -0.03em">k</span
+				><span style="margin-left: -0.03em">i</span>
 			</div>
 			<img class="pony" src="ponyblink/0000.png" />
 		</div>
